name:                csv-writer-haskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ryu1kn/csv-writer-haskell.git#readme
license:             BSD3
license-file:        LICENSE
author:              Ryuichi Inagaki
maintainer:          ryuichi.inagaki.24@googlemail.com
copyright:           2016 Ryuichi Inagaki
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Wrappable
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable csv-writer-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , csv-writer-haskell
  default-language:    Haskell2010

test-suite csv-writer-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , csv-writer-haskell
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ryu1kn/csv-writer-haskell.git
